<resources>
    <string name="app_name">TicketToRide</string>

    <!-- LOGIN -->
    <string name="login_title">Ticket To Ride</string>
    <string name="login_username_label">Username</string>
    <string name="login_username_hint">Username...</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_hint">Password...</string>
    <string name="login_confirm_password_label">Confirm</string>
    <string name="login_confirm_password_hint">Confirm Password...</string>
    <string name="login_switch_login_label">LOGIN</string>
    <string name="login_switch_register_label">REGISTER</string>
    <string name="login_submit_button">Submit</string>
    <string name="login_server_settings">Settings</string>

    <!-- SERVER SETTINGS DIALOG -->
    <string name="server_settings_title">Connection Settings</string>
    <string name="server_settings_host">Host IP:</string>
    <string name="server_settings_port">Port:</string>
    <string name="server_settings_debug">Debug Mode:</string>

    <!--GAME LIST/LOBBY -->
    <string name="create_game_button">Create Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="lobby_title">Players</string>
    <string name="start_game_button">Start Game</string>
    <string name="send">Send</string>
    <string name="chat_hint">Type here...</string>
    <string name="leave_game_button">X</string>


    <!-- CREATE GAME STRING SET -->
    <string name="select_a_game">Select a Game</string>
    <string name="create_game_dialog_title">Create New Game</string>

    <string name="create_game_room_name">Room Name:</string>
    <string name="create_game_room_name_hint">Room Name&#8230;</string>

    <string name="create_game_display_name">Display Name:</string>

    <string name="create_game_players">Players</string>
    <string name="create_game_dialog_private_game">Private Game:</string>

    <!-- JOIN GAME DIALOG STRING SET -->
    <string name="join_game_dialog_title">Join Game</string>

    <string name="join_game_room_number_label">Game Room:</string>
    <string name="join_game_display_name_label">Display Name:</string>

    <string name="join_game_button_text">Join Game</string>

    <!-- MAIN GAME ACTIVITY -->
    <string name="game_select_dest_card_title">SELECT DESTINATION CARDS</string>
    <string name="game_select_train_card_title">SELECT TRAIN CARDS</string>
    <string name="game_select_dest_card_subtitle">choose at least </string>
    <string name="claim_route_button_text">Claim Route</string>
    <string name="draw_train_card_text">Draw Train Card</string>
    <string name="draw_dest_card_text">Draw Destination Card</string>
    <string name="select">Select</string>
    <string name="game_view_last_round">LAST ROUND</string>
    <string name="cards">cards</string>
    <string name="toggle_map_names">Toggle Map Names</string>

    <!-- SIDEBAR TEXT -->
    <string name="chat_title">CHAT</string>
    <string name="game_history_title">GAME HISTORY</string>
    <string name="game_status_title">GAME STATUS</string>
    <string name="sidebar_open_game_status">Open</string>
    <string name="game_status_dialog_title">Game Status</string>
    <string name="close_modal_button_text">X</string>
    <string name="points">Points</string>
    <string name="trains">Trains</string>
    <string name="train_cards">Train Cards</string>
    <string name="dest_cards">Destination Cards</string>
    <string name="routes">Routes</string>
    <string name="sidebar_open_game_over">Final Scores</string>
    <string name="sidebar_open_game_over_exit">Exit Game</string>

    <!-- CLAIM ROUTE DIALOG -->
    <string name="claim_route_title_text">Claim Route</string>
    <string name="claim_route_dialog_button_text">Claim Route</string>
    <string name="claim_route_plus">+</string>
    <string name="claim_route_minus">-</string>

    <!-- GAME OVER DIALOG -->
    <string name="game_over_dialog_title">Game Over</string>

    <!-- GENERIC -->
    <string name="train_color_title_text">Train Color</string>
    <string name="display_name_hint">Display Name&#8230;</string>

    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_black">Black</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="locomotive">Locomotive</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="player_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
