<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <RelativeLayout
        android:id="@+id/join_game_room_number_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/join_game_room_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_game_room_number_label"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:width="120dp"
            android:textAlignment="textEnd"/>

        <EditText
            android:id="@+id/join_game_room_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/join_game_room_number_label"
            android:inputType="none"
            android:enabled="false"
            android:editable="false"
            android:text="STUFF"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_game_display_name_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_game_room_number_rl">

        <TextView
            android:id="@+id/join_game_display_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_game_display_name_label"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:width="120dp"
            android:textAlignment="textEnd"/>

        <EditText
            android:id="@+id/join_game_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/display_name_hint"
            android:layout_toEndOf="@id/join_game_display_name_label"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/join_game_train_color_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_game_display_name_rl"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/join_game_train_color_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/train_color_title_text"/>

        <Button
            android:id="@+id/join_game_train_color_black_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game_train_color_label"
            android:background="@drawable/button_grey"
            android:text="@string/color_black"/>

        <Button
            android:id="@+id/join_game_train_color_blue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game_train_color_black_button"
            android:background="@drawable/button_blue"
            android:text="@string/color_blue"/>

        <Button
            android:id="@+id/join_game_train_color_green_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game_train_color_blue_button"
            android:background="@drawable/button_green"
            android:text="@string/color_green"/>

        <Button
            android:id="@+id/join_game_train_color_red_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game_train_color_green_button"
            android:background="@drawable/button_red"
            android:text="@string/color_red"/>

        <Button
            android:id="@+id/join_game_train_color_yellow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game_train_color_red_button"
            android:background="@drawable/button_yellow"
            android:text="@string/color_yellow"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_game_train_color_rl"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@color/train_light_grey"
                android:text="@string/cancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/join_game_button_text"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
