<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/player_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game_button"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/send_chat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/chat_hint"/>

        <Button
            android:id="@+id/send_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

    </LinearLayout>

</LinearLayout>