<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/train_card_close_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_red"
        android:text="@string/close_modal_button_text"/>

    <TextView
        android:id="@+id/train_card_frag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        style="@style/TitleText"
        android:text="@string/game_select_train_card_title"/>

    <Button
        android:id="@+id/train_card_frag_select_cards"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/select"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/train_card_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/train_card_frag_title"
        android:layout_above="@id/train_card_frag_select_cards"
        android:gravity="center">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/train_card_select_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

</RelativeLayout>