<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/game_over_close_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_red"
        android:text="@string/close_modal_button_text"/>

    <TextView
        android:id="@+id/game_over_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        style="@style/TitleText"
        android:text="@string/game_over_dialog_title"/>

    <TextView
        android:id="@+id/game_over_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        style="@style/TitleText"
        tools:text="Player 1 wins!"
        android:layout_below="@id/game_over_title"/>

    <LinearLayout
        android:id="@+id/game_over_stats_container_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_over_winner"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/points"
                android:layout_weight="1"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/game_over_stats_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>
