<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/game_map_outer_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <client.view.fragment.game_map.customview.GameMapView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/game_map"
                android:background="@drawable/map"/> <!-- NOTE: don't remove this line or onDraw() never gets called!-->
        </HorizontalScrollView>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim_route_button_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_dest_card_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_train_card_text"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/game_map_player_turn_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/game_map_zoom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:text="zoom"/>


</RelativeLayout>